# kokola

./: CMakeLists.txt  main.cpp
data/: test.data
include/kokola/io/: hdfs_stream.h  io.h  local_stream.h  reader.h
include/kokola/utils/: common.h  configure.h  log.h
src/io/: CMakeLists.txt  io.cpp  local_stream.cpp  reader.cpp
src/utils/: CMakeLists.txt  log.cpp
